[package]
name = "rave-index"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
#Environment variable access libraries
dotenv = "0.15.0"

# Data serialization library
serde = { version = "1.0.110", features = ["derive"] }
# Other utilities
chrono = {version = "0.4.11", features = ["serde"]}

#Postgres access library
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}

# Openssl for build (if openssl is not already installed on the dev server)
openssl = { version = "0.10.41", features = ["vendored"] }
